fix-修改查询个人收藏求助avatar问题，添加censored返回字段